syntax = "proto3";
package AccountMessage;

// proto_id = sid + cid;
enum proto_ids {
  option allow_alias = true;
  EMPTY_PROTO = 0;

  // service id
  ACCOUNT_SERVICE = 0x0001;

  // command id
  CID_LOGIN = 0x0001;
  CID_REGISTER = 0x0002;
}

// user login:
message LoginRequest {
  string username = 1;
  string password = 2;
  int32 hid = 3;
}

message LoginResponse {
  int32 result = 1;
  int32 uid = 2;
}

// user register:
message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse { int32 result = 1; }

// grpc service
service Account {
  rpc login(LoginRequest) returns (LoginResponse) {}
  rpc register(RegisterRequest) returns (RegisterResponse) {}
}
